fix vertical alignment on title selection dropdown menu

--- a/css/improv.css
+++ b/css/improv.css
@@ -6,7 +6,7 @@
 /*   By: fbes <fbes@student.codam.nl>                 +#+                     */
 /*                                                   +#+                      */
 /*   Created: 2021/11/28 01:00:01 by fbes          #+#    #+#                 */
-/*   Updated: 2022/01/17 20:57:21 by fbes          ########   odam.nl         */
+/*   Updated: 2022/01/17 21:19:17 by fbes          ########   odam.nl         */
 /*                                                                            */
 /* ************************************************************************** */
 
@@ -165,6 +165,11 @@ li.scaleteam-list-item .rating {
 .profile-banner .name,
 .profile-banner .login {
 	text-shadow: 0 0 3px #000000 !important;
+}
+
+/* bugfix for vertical text alignment in dashboard banner on title selection button */
+.profile-banner .btn-group.margin-top-15 {
+	margin-top: 23px !important;
 }
 
 /* bugfix for dropdown menu cursus select in dashboard banner */
@@ -435,6 +440,10 @@ textarea {
 	/* fix padding on profile name etc. */
 	.user-primary .user-infos.padding-left-30 {
 		padding-left: 15px !important;
+	}
+	.user-primary .coalition-name.margin-right-10,
+	.user-primary .coalition-name .margin-right-10 {
+		margin-right: 0px !important;
 	}
 }
 
